--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									PhD Candidate <br> Rutgers Physics and Astronomy
+									Galaxy Detective <br> PhD Candidate <br> Rutgers Physics and Astronomy
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -106,11 +106,21 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
-							</p>
+								<b>About Me:</b>
+							</p> Snooping around in the private lives of galaxies has been a desire of mine for as long as I've known that the universe was home 
+							to more than just the Milky Way. The pursuit of this passion was put on hold when at 15 I found myself needing to focus on a more 
+							immediate desire of escaping houselessness and putting a roof over my head. During this period of my life I had many adventures -- 
+							including playing in bands, pretending to be an artist, and falling in love.
+							<br> My return to school was well timed. 
+							There have been many advances in our understanding of how galaxies form and evolve over the last several years. 
+							With these advances come new techniques which allow us to reconstruct what a galaxy has been up to with nothing but the light we observe. 
+							It's beyond thrilling to get to contribute to this body of work.
+							<br>My specialization lies in looking at the environmental dependence of star formation in galaxies based on their star formation histories. 
+							I'm particularly interested in the temporal and spatial relationship of star formation within galaxies in spatially resolved observations, 
+							as well as between galaxies that are in groups or pairs.
 							<p>
-								<b>Research Interests:</b>
-							</p>
+								<b>Education:</b>
+							</p> 
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
 							</p>
