--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/IfamilyJPG.JPG" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -122,7 +122,7 @@
 								<b>Education:</b>
 							</p> 
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/user/libraries/wV1KZJTyRxKIYe-Ax_LyXA">ADS link</a>
 							</p>
 						</article>
 
@@ -130,7 +130,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/Showstopper_v7.jpg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
