--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	-->
 	<head>
 		<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
-		<title>AstroSites</title>
+		<title>CharlotteOlsen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- 	This links to this page's CSS, which is contained in the folder assets/css and the file main.css.
@@ -48,7 +48,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/twitter_photo.jpg" style="width:400px; height:400px; object-fit: cover;">
+								<img src="images/twitter_photo.jpeg" style="width:400px; height:400px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
@@ -86,7 +86,7 @@
 									another List Item with a link inside of it.
 								-->
 								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
+									<a href="images/twitter_photo.jpeg">My CV</a>
 								</li> -->
 							</ul>
 						</nav>
