--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/twitter_photo.jpeg" style="width:400px; height:400px; object-fit: cover;">
+								<img src="images/Olsen_2022.png" style="width:200px; height:200px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
