--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									another List Item with a link inside of it.
 								-->
 								<!-- <li>
-									<a href="images/twitter_photo.jpeg">My CV</a>
+									<a href="images/Olsen_2022.png">My CV</a>
 								</li> -->
 							</ul>
 						</nav>
