--- a/index.html
+++ b/index.html
@@ -136,7 +136,25 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								Much of my work exists at the border of where our instruments can resolve features within galaxies. 
+								This allows for important validation of high redshift techniques on nearby and nearby low mass galaxies, 
+								but also enables the development of 
+								new methods that allow us to push deeper into the semi-resolved universe. 
+								Bonus is that we can learn new things about our only somewhat distant neighbors. 
+								What I'm most eager to learn is how individual galaxies grow their stellar mass over time, 
+								and how much impact their external and internal environment impacts this. The low redshift universe grants us access to some of the smallest, faintest, 
+								and most plentiful galaxies in the universe that are otherwise below the detection limit of our instruments when at higher redshifts.
+								
+								<b>SEDs and CMDs Find Synchronized Star Formation in Local Volume Dwarf Galaxies</b><br>There are two main ways of reconstructing 
+								a galaxy's star formation history (SFH). If it is nearby, you can look at the color and brightness of its stars and infer the ages of 
+								its stellar populations. If it is far away you can sum up 
+								the total flux through bands at different wavelengths and then fit the galaxy's spectrum and infer the populations that 
+								contribute to it's total light. The first is the color-magnitude diagram method of SFR reconstruction and the second is the spectral energy distribution (SED) fitting method. 
+								I do the second one, but seeing how the two compare is an important validation! 
+								We took galaxies that were close enough to resolve individual stars, yet far away enough to have reliable integrated photometry 
+								and compared their SFHs. Not only did these compare well, but we found that the SFHs of the galaxies in our sample 
+								decreased and increased their star formation 
+								synchronistically at specific epochs in spite of being separated by great distances!! 
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
