--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
 							</p>
+							<p>
+								<b>Project III Title</b><br>Project description, including further links to posters, talks, publications.
+							</p>
 						</article>
 
 						<!-- Here is the "Community" card. -->
