--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#community">Community Impact</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
@@ -120,7 +120,10 @@
 							as well as between galaxies that are in groups or pairs.
 							<p>
 								<b>Education:</b>
-							</p> 
+							</p>  2023  -- Rutgers University -- Ph.D. Physics and Astronomy </b>
+						2020 -- Rutgers University -- M.S. Physics and Astronomy </b>
+		2017 -- Cal Poly Humboldy -- B.S. Physics, Math Minor </b>
+	2014 -- College of the Redwoods  --  A.A. in Science </b>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/user/libraries/wV1KZJTyRxKIYe-Ax_LyXA">ADS link</a>
 							</p>
