--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 							as well as between galaxies that are in groups or pairs.
 							<p>
 								<b>Education:</b>
-							</p>  2023  -- Rutgers University -- Ph.D. Physics and Astronomy </b>
-						2020 -- Rutgers University -- M.S. Physics and Astronomy </b>
-		2017 -- Cal Poly Humboldy -- B.S. Physics, Math Minor </b>
-	2014 -- College of the Redwoods  --  A.A. in Science </b>
+							</p>  2023  -- Rutgers University -- Ph.D. Physics and Astronomy <br>
+						2020 -- Rutgers University -- M.S. Physics and Astronomy <br>
+		2017 -- Cal Poly Humboldy -- B.S. Physics, Math Minor <br>
+	2014 -- College of the Redwoods  --  A.A. in Science <br>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/user/libraries/wV1KZJTyRxKIYe-Ax_LyXA">ADS link</a>
 							</p>
@@ -147,7 +147,7 @@
 								What I'm most eager to learn is how individual galaxies grow their stellar mass over time, 
 								and how much impact their external and internal environment impacts this. The low redshift universe grants us access to some of the smallest, faintest, 
 								and most plentiful galaxies in the universe that are otherwise below the detection limit of our instruments when at higher redshifts.
-								<p>
+								<p><br>
 								
 								<b>SEDs and CMDs Find Synchronized Star Formation in Local Volume Dwarf Galaxies</b><br>There are two main ways of reconstructing 
 								a galaxy's star formation history (SFH). If it is nearby, you can look at the color and brightness of its stars and infer the ages of 
