--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community Impact</a>
+									<a href="#community">Community</a>
+								</li>
+								<li>
+									<a href="#awards">Recognition</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
 								</li>
+								
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
