--- a/index.html
+++ b/index.html
@@ -170,6 +170,25 @@
 							<p>
 								<b>Project III Title</b><br>Project description, including further links to posters, talks, publications.
 							</p>
+							</article>
+
+						<!-- Here is the "Recognition" card. -->
+						<article id="awards">
+							<h2 class="major">Recognition</h2>
+							<span class="image main">
+								<img src="images/pic03.jpg" alt=""/>
+							</span>
+							<p>
+								<b>Awards:</b>
+							</p>
+							<p>
+								<b>Media:</b>
+							</p>
+							<p>
+								<b>Grants and Fellowships:</b>
+							</p>
+						</article>
+
 						</article>
 
 						<!-- Here is the "Community" card. -->
