--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									- Galaxy Detective - <br> - PhD Candidate - <br> - Rutgers Physics and Astronomy -
+									- Astrophysicist - <br> - Galaxy Detective - <br> - LSST DA Catalyst Fellow - <br> - New York City College of Technology
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 							
