--- a/index.html
+++ b/index.html
@@ -147,11 +147,10 @@
 								This allows for important validation of high redshift techniques on nearby and nearby low mass galaxies, 
 								but also enables the development of 
 								new methods that allow us to push deeper into the semi-resolved universe. 
-								Bonus is that we can learn new things about our only somewhat distant neighbors. 
-								What I'm most eager to learn is how individual galaxies grow their stellar mass over time, 
+								Bonus is that we can learn new things about our near-ish neighbors. 
+								What I'm most interested in is how individual galaxies grow their stellar mass over time, 
 								and how much impact their external and internal environment impacts this. The low redshift universe grants us access to some of the smallest, faintest, 
-								and most plentiful galaxies in the universe that are otherwise below the detection limit of our instruments when at higher redshifts.
-								<p><br>
+								and most plentiful galaxies. These small galaxies are the most sensitive to environment and therefore promise to tell us the most about how environment drives galaxy evolution. 
 								
 								<b>SEDs and CMDs Find Synchronized Star Formation in Local Volume Dwarf Galaxies</b><br>There are two main ways of reconstructing 
 								a galaxy's star formation history (SFH). If it is nearby, you can look at the color and brightness of its stars and infer the ages of 
@@ -165,10 +164,24 @@
 								synchronistically at specific epochs in spite of being separated by great distances!! 
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Looking for confformity in Local Volume galaxies </b><br>
+								Galactic conformity refers to shared property between pairs of galaxies. For example, the average color or SFR of galaxies near
+								a central galaxy may be similar to the properties of that central galaxy. These types or tests are usually performed on large populations
+								to find in-situ trends in galaxy evolution. We investigated whether the galaxies having synchronized star formation might also show conformity. 
+								Using the SFHs of the galaxies allowed us to read the properties off the SFHs at different epochs. We did find conformity, but not in 
+								the galaxies showing synchronized star formation, which suggests that synchronized star formation and conformity are sensitive to different effects.
+								Additionally we saw that the conformity signal was sensitive to the geometry of the volume. Using SFHs to test for conformity gives us a promising
+								new way to test for interactions back in time within a volume. 
+
 							</p>
 							<p>
-								<b>Project III Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>Using spatially resolved SFHs in UVCANDELS</b><br>Project description, including further links to posters, talks, publications.
+							</p>
+							<p>
+								<b>Finding the effects of filaments on galaxy SFHs in the New Horizon simulation </b><br>Project description, including further links to posters, talks, publications.
+							</p>
+							<p>
+								<b>The role of environment on dwarf galaxy development in LSST</b><br>Project description, including further links to posters, talks, publications.
 							</p>
 							</article>
 
