--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
 								What I'm most interested in is how individual galaxies grow their stellar mass over time, 
 								and how much impact their external and internal environment impacts this. The low redshift universe grants us access to some of the smallest, faintest, 
 								and most plentiful galaxies. These small galaxies are the most sensitive to environment and therefore promise to tell us the most about how environment drives galaxy evolution. 
+							</p>
+							<p>
 								
 								<b>SEDs and CMDs Find Synchronized Star Formation in Local Volume Dwarf Galaxies</b><br>There are two main ways of reconstructing 
 								a galaxy's star formation history (SFH). If it is nearby, you can look at the color and brightness of its stars and infer the ages of 
@@ -225,7 +227,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email:  charlotteastronomy -at- gmail . com</b> 
 							</p>
 							<p> 
 								<b>Address:</b> 
