--- a/index.html
+++ b/index.html
@@ -195,12 +195,26 @@
 							</span>
 							<p>
 								<b>Awards:</b>
+								
+							<p>
+							Robert A. Schommer Prize, The Robert A. Schommer Prize is awarded to the one student
+							who, in the collective judgment of the astrophysics faculty in the Department, has published
+							the best first-author, refereed journal article in the field of astrophysics in the past two years 
+			
 							</p>
 							<p>
+							
+							</p>
 								<b>Media:</b>
 							</p>
 							<p>
 								<b>Grants and Fellowships:</b>
+							</p>
+							<p>
+								Noemie Koller Endowed Graduate Scholarship, The Noemie Koller Endowed Scholarship in the
+Department of Physics and Astronomy has been established with a gift from Prof. Koller. This
+gift was made based on her appreciation of the importance of financial assistance in attracting the
+best graduate students. The intent is to assist individual students and the department as a whole. ,
 							</p>
 						</article>
 
