--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
 							<p>
 								<b>Grants and Fellowships:</b>
 							</p>
+
+							<p>
+								<b>LSST DA Catalyst Fellowship </b> The Catalyst Fellowship is a four year
+								prize postdoctoral fellowship thatworks towards making Rubin LSST science globally 
+								and equitably accessible to fulfill Rubin’s twin promises of breaking scientific barriers
+								and furthering human knowledge. Within this context, the LSSTC Catalyst Fellowship Program seeks 
+								early-career researchers who aspire not only to conduct their own cutting-edge scientific research, 
+								but also to contribute to the program’s lasting legacy by building networks, learning and sharing skills, 
+								and cultivating practices that enable science with big data.
+							</p>
+							
+				
 							<p>
 								<b>Noemie Koller Endowed Graduate Scholarship</b>, The Noemie Koller Endowed Scholarship in the
 								Department of Physics and Astronomy has been established with a gift from Prof. Koller. This
