--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 							
 									<!-- Note you will want to change where this points to! -->
-									<a href="Olsen_Full_CV (1).pdf" target="Olsen_Full_CV (1).pdf">Curriculum Vitae</a>
+									<a href="Olsen_Full_CV_jan_2024.pdf" target="Olsen_Full_jan_2024.pdf">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
