--- a/index.html
+++ b/index.html
@@ -232,6 +232,34 @@
 							</p>
 								<b>Media and Public Engagement:</b>
 							</p>
+
+							<p>
+								<b>Telescope night at the Clarence Dillon Public Library</b>, Taught families how to use the brand new
+								telescope the library had acquired
+							</p>
+							<p>
+								<b>The Astro Show</b>, Video Show by Wyoming Stargazing, Guest speaker, Showcased research for a call in 
+								crowd of amateur astronomers and astronomy enthusiasts alongside regular scientist hosts.
+							</p>
+
+							<p>
+								<b>Assigned Scientist at Bachelors (ASAB) Podcast On Space, Special Guest, ASAB is a podcast by
+									and for trans and nonbinary scientists. As a special guest I talked about my career path, my identity, and
+									my science..</b>
+							</p>
+							<p>
+								<b>The Tundra</b> Beyond Space, Video Podcast, Special Guest.
+							</p>
+
+							<p>
+								<b>Astrobites</b> Queer Astronomy Pt 1 & 2
+							</p>
+
+							<p>
+								<b>Press Release</b> 36 Dwarf Galaxies Had Simultaneous ”Baby Boom” of New Stars, Translated into dozens of
+langueages and picked up my Sky & Telescope.
+								
+							</p>
 						
 							<p>
 								<b>Grants and Fellowships:</b>
