--- a/index.html
+++ b/index.html
@@ -177,7 +177,14 @@
 
 							</p>
 							<p>
-								<b>Using spatially resolved SFHs in UVCANDELS</b><br>Project description, including further links to posters, talks, publications.
+								<b>Using spatially resolved SFHs in UVCANDELS</b><br> How do regions evolve over time within galaxies? Using the excellent increased resolution of 
+								UVCANDELS we explore internal drivers of galaxy evolutiom with spatially resolved SFHs. After selecting ideal galaxies from the UVCANDELS sample with good detections 
+								in the blue/UV F275W HST filter, we tessellated over the postage stamps to create regions defined by similar signal-to-noise. Given the multiwavelength 
+								SEDs from these regions, we fit the SED in a similar manner as we do with dwarf galaxies and reconstruct the SFH for each region. From this we learn
+								anout the growth of stellar mass spatially accross galaxies, and we track the evolution of regions around the resolved SFR stellar mass 
+								correlation. We see a negligible change in the slope of the correllation over the past Gyr, but a decrease in the normalizatuon of the relation 
+								as over cosmic time. 
+								
 							</p>
 							<p>
 								<b>Finding the effects of filaments on galaxy SFHs in the New Horizon simulation </b><br>Project description, including further links to posters, talks, publications.
@@ -377,7 +384,7 @@ langueages and picked up my Sky & Telescope.
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Charlotte Olsen. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
