--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 							<p>
 								<b>Press Release</b> 36 Dwarf Galaxies Had Simultaneous ”Baby Boom” of New Stars, Translated into dozens of
-langueages and picked up my Sky & Telescope.
+								 langueages and picked up my Sky & Telescope.
 								
 							</p>
 						
@@ -312,10 +312,10 @@ langueages and picked up my Sky & Telescope.
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
-							-- Outreach, professional service, and teaching are as necessary to being an astronomer
+							 Outreach, professional service, and teaching are as necessary to being an astronomer
 							as research, and this work is arguably  much more important. I think it crucial that our
 							legacies as scientists be measured more by those we bring into the field than our h-index or 
-							publication counts. -- As a member of the queer community and a nonbinary scientist, my positionality
+							publication counts. <br> As a member of the queer community and a nonbinary scientist, my positionality
 							within my discipline has often informed my decisions with regards to mentoring, outreach, service, and pedagogy. 
 							This is an area I'm particularly eager to keep developing. 
 							<p>
