--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		2017 -- Cal Poly Humboldy -- B.S. Physics, Math Minor <br>
 	2014 -- College of the Redwoods  --  A.A. in Science <br>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/user/libraries/wV1KZJTyRxKIYe-Ax_LyXA">ADS link</a>
+								<b>Publications:</b> <a href="https://orcid.org/0000-0002-8085-7578">ORC ID</a>
 							</p>
 						</article>
 
