--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 							
 									<!-- Note you will want to change where this points to! -->
-									<a href="Olsen_Full_CV_jan_2024.pdf" target="Olsen_Full_jan_2024.pdf">Curriculum Vitae</a>
+									<a href="Olsen_Full_CV.pdf" target="Olsen_Full_CV.pdf">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -187,10 +187,16 @@
 								
 							</p>
 							<p>
-								<b>Finding the effects of filaments on galaxy SFHs in the New Horizon simulation </b><br>Project description, including further links to posters, talks, publications.
+								<b>Finding the effects of filaments on galaxy SFHs in the New Horizon simulation </b><br> Can synchronized star formation in the Local Volume be the result of interaction with a filament?
+								The NewHorizon simulation has the resolution to analyze low mass galaxies near filaments. 
+								Here we explore how dwarf galaxy star formation histories are affected based on their distance and orientation to filaments, and 
+								explore new ways in which to use galaxy SFHs as a probe of environment. 
 							</p>
 							<p>
-								<b>The role of environment on dwarf galaxy development in LSST</b><br>Project description, including further links to posters, talks, publications.
+								<b>The role of environment on dwarf galaxy development in LSST</b><br>The Legacy Survey of Space and Time from the Vera C. Rubin Observatory will map the southern night sky over the course of 10 years, 
+								creating deep imaging that can trace out cosmic structure from the faintest galaxies. Using knowledge gained from the 
+								New Horizon simulated dwarfs, we will trace interaction with cosmic structure using dwarf galaxy SFHs reconstructed from 
+								Rubin Observations and supplementary VISTA/VIDEO bands in the infrared. 
 							</p>
 							</article>
 
