--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ to show by example that students in alternative High Schools can still be academ
 							<p>
 								<b>Teaching and Professional Development:</b>
 								<p>
-									<iframe src="embedded_content.html" style="width:100%; height:400px; border:none;"></iframe>
+									<iframe src="galaxy_plot.html" style="width:100%; height:400px; border:none;"></iframe>
 								<\p>
 							
 	
