try again whith adding a button

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 									<a href="#awards">Recognition</a>
 								</li>
 								<li>
+									<a href="#studentresearch">Mentoring</a>
+								</li>
+								<li>
 									<a href="#contact">Contact</a>
 								</li>
 								
